@@ -22,6 +22,7 @@
   * [Install-PerformanceCounter](http://get-carbon.org/help/Install-PerformanceCounter.html)
   * [Test-PerformanceCounter](http://get-carbon.org/help/Test-PerformanceCounter.html)
   * [Test-PerformanceCounterCategory](http://get-carbon.org/help/Test-PerformanceCounterCategory.html)
+  * [Uninstall-PerformanceCounterCategory](http://get-carbon.org/help/Uninstall-PerformanceCounterCategory.html)
 * Improved whitespace in HTML documentation code samples.
 
 
